Revisadas todas las sesiones de la 02 a la 07 me falta matizar la sesion 01 - GTA3S0839